Updated initial training data

--- a/01_retrieve_influx_data.ipynb
+++ b/01_retrieve_influx_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4be9801e-8f49-4225-a30b-f56eeb169255",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9578087c-266a-4f20-9a27-fccf6f878153",
    "metadata": {},
    "outputs": [],
@@ -62,10 +62,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "42eee6b9-6259-4a68-9e9a-54c64b15dc4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       result  table                           _start  \\\n",
+      "0     _result      0 2025-02-12 13:52:08.151214+00:00   \n",
+      "1     _result      0 2025-02-12 13:52:08.151214+00:00   \n",
+      "2     _result      0 2025-02-12 13:52:08.151214+00:00   \n",
+      "3     _result      0 2025-02-12 13:52:08.151214+00:00   \n",
+      "4     _result      0 2025-02-12 13:52:08.151214+00:00   \n",
+      "...       ...    ...                              ...   \n",
+      "4043  _result      7 2025-02-12 13:52:08.151214+00:00   \n",
+      "4044  _result      7 2025-02-12 13:52:08.151214+00:00   \n",
+      "4045  _result      7 2025-02-12 13:52:08.151214+00:00   \n",
+      "4046  _result      7 2025-02-12 13:52:08.151214+00:00   \n",
+      "4047  _result      7 2025-02-12 13:52:08.151214+00:00   \n",
+      "\n",
+      "                                _stop                            _time  \\\n",
+      "0    2025-02-12 14:52:08.151214+00:00 2025-02-12 14:26:34.190000+00:00   \n",
+      "1    2025-02-12 14:52:08.151214+00:00 2025-02-12 14:26:37.025000+00:00   \n",
+      "2    2025-02-12 14:52:08.151214+00:00 2025-02-12 14:26:40.020000+00:00   \n",
+      "3    2025-02-12 14:52:08.151214+00:00 2025-02-12 14:26:43.024000+00:00   \n",
+      "4    2025-02-12 14:52:08.151214+00:00 2025-02-12 14:26:46.023000+00:00   \n",
+      "...                               ...                              ...   \n",
+      "4043 2025-02-12 14:52:08.151214+00:00 2025-02-12 14:51:53.470000+00:00   \n",
+      "4044 2025-02-12 14:52:08.151214+00:00 2025-02-12 14:51:56.469000+00:00   \n",
+      "4045 2025-02-12 14:52:08.151214+00:00 2025-02-12 14:51:59.469000+00:00   \n",
+      "4046 2025-02-12 14:52:08.151214+00:00 2025-02-12 14:52:02.469000+00:00   \n",
+      "4047 2025-02-12 14:52:08.151214+00:00 2025-02-12 14:52:05.475000+00:00   \n",
+      "\n",
+      "       _value         _field  _measurement batteryId  \n",
+      "0     18.6500    ambientTemp  battery_data         1  \n",
+      "1     18.3600    ambientTemp  battery_data         1  \n",
+      "2     18.1700    ambientTemp  battery_data         1  \n",
+      "3     18.5000    ambientTemp  battery_data         1  \n",
+      "4     18.1200    ambientTemp  battery_data         1  \n",
+      "...       ...            ...           ...       ...  \n",
+      "4043  99.9986  stateOfHealth  battery_data         1  \n",
+      "4044  99.9985  stateOfHealth  battery_data         1  \n",
+      "4045  99.9984  stateOfHealth  battery_data         1  \n",
+      "4046  99.9983  stateOfHealth  battery_data         1  \n",
+      "4047  99.9982  stateOfHealth  battery_data         1  \n",
+      "\n",
+      "[4048 rows x 9 columns]\n",
+      "Saved raw battery data from InfluxDB.\n"
+     ]
+    }
+   ],
    "source": [
     "df = retrieve_battery_data()\n",
     "\n",
