--- a/02_prepare_data.ipynb
+++ b/02_prepare_data.ipynb
@@ -2,10 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "370d5300-b90f-4e5e-9992-a855ad058b71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_field                         timestamp  batteryId  ambientTemp  \\\n",
+      "0       2025-02-12 14:26:34.190000+00:00          1        18.65   \n",
+      "1       2025-02-12 14:26:37.025000+00:00          1        18.36   \n",
+      "2       2025-02-12 14:26:40.020000+00:00          1        18.17   \n",
+      "3       2025-02-12 14:26:43.024000+00:00          1        18.50   \n",
+      "4       2025-02-12 14:26:46.023000+00:00          1        18.12   \n",
+      "\n",
+      "_field  batteryCurrent  batteryTemp  batteryVoltage  distance     kmh  \\\n",
+      "0                78.06        25.22          396.39      0.20  127.75   \n",
+      "1                81.42        25.33          396.23      0.31  130.46   \n",
+      "2                75.76        25.39          396.49      0.42  125.59   \n",
+      "3                72.11        25.44          396.66      0.52  122.42   \n",
+      "4                73.72        25.47          396.58      0.62  123.87   \n",
+      "\n",
+      "_field  stateOfCharge  stateOfHealth  \n",
+      "0              0.9991        99.9998  \n",
+      "1              0.9986        99.9997  \n",
+      "2              0.9981        99.9996  \n",
+      "3              0.9977        99.9995  \n",
+      "4              0.9972        99.9994  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -24,10 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47a050c4-0f1c-43e4-9431-cc9111557829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved battery data for ML training.\n"
+     ]
+    }
+   ],
    "source": [
     "df_pivot.to_csv(\"./data/battery_data.csv\", index=False)\n",
     "print(\"Saved battery data for ML training.\")"
